# AdamOndraBot

./: README.md  pyproject.toml  requirements.txt  setup.py
.github/: auto-assign.yml
ondra/: log.py  main.py  replies.py
ondra/ondras_crag/reaction/: __init__.py  reaction_pattern.py  reactions.py
resources/: reactions.json
src/: log.py  main.py  replies.py
src/reaction/: reaction_pattern.py  reactions.py
tests/: __init__.py
tests/ondras_crag/: test_reaction_pattern.py
